--- a/locales/eo.json
+++ b/locales/eo.json
@@ -25,7 +25,11 @@
         "i18n_vegan_limited": "vegana limigite",
         "i18n_vegan_limited_title": "Loko kun limigita vegana oferto (kutime tio signifas, ke vi devas peti ĝin).",
         "i18n_vegetarian_friendly": "vegetaran-taŭga",
-        "i18n_vegetarian_friendly_title": "Loko, kiu ofertas ankaŭ vegetaran manĝaĵon, sed neniu vegana."
+        "i18n_vegetarian_friendly_title": "Loko, kiu ofertas ankaŭ vegetaran manĝaĵon, sed neniu vegana.",
+        "i18n_vegan_hairdresser_only": "vegan hairdresser",
+        "i18n_vegan_hairdresser_only_title": "Place which offers exclusively vegan Shampoo.",
+        "i18n_vegan_hairdresser_friendly": "vegan friendly hairdresser",
+        "i18n_vegan_hairdresser_friendly_title": "Place which offers vegan Shampoo."
       },
       "words": {
         "open": "malfermita",
