--- a/locales/fr.json
+++ b/locales/fr.json
@@ -25,7 +25,11 @@
         "i18n_vegan_limited": "végétalien limité",
         "i18n_vegan_limited_title": "Lieu avec une offre vegan limitée (cela signifie généralement que vous devez le demander et ce n'est pas clairement indiqué sur le menu).",
         "i18n_vegetarian_friendly": "convient aux végétariens",
-        "i18n_vegetarian_friendly_title": "Place avec un végétarien, mais pas d'offre végétalienne."
+        "i18n_vegetarian_friendly_title": "Place avec un végétarien, mais pas d'offre végétalienne.",
+        "i18n_vegan_hairdresser_only": "vegan hairdresser",
+        "i18n_vegan_hairdresser_only_title": "Place which offers exclusively vegan Shampoo.",
+        "i18n_vegan_hairdresser_friendly": "vegan friendly hairdresser",
+        "i18n_vegan_hairdresser_friendly_title": "Place which offers vegan Shampoo."
       },
       "words": {
         "open": "ouvert",
